Allow connections from localhost by default.
- This also allows using this starter without
defining anything in application.properties