@@ -1,13 +1,12 @@
 package org.joulesjs;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
 
 @ConfigurationProperties(prefix = "joulesjs")
 public class JoulesJsProperties {
-  private List<String> allowedIps = Collections.emptyList();
+  private List<String> allowedIps = List.of("127.0.0.1", "0:0:0:0:0:0:0:1");
 
   public List<String> getAllowedIps() {
     return allowedIps;
